<resources>
    <string name="app_name">MarketApp</string>
    <string name="main_activity_title">Bienvenidos</string>
    <string name="activity_main_help_names">Nombres Completos</string>
    <string name="main_activity_help_age">Numero de documento</string>
    <string name="main_activity_register">Registrar</string>
    <string name="main_activity_validation_names">Debe ingresar sus nombres</string>
    <string name="main_activity_validation_age">Debe ingresar su edad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Iniciar Sesion</string>
    <string name="fragment_login_helper_email">Correo electrónico</string>
    <string name="fragment_login_helper_password">Contraseña</string>
    <string name="fragment_login_button">Ingresar</string>
    <string name="fragment_login_remember_account">Recordar mi cuenta</string>
    <string name="fragment_login_create_account">Crear Cuenta</string>
    <string name="fragment_login_forget_password">¿Olvidaste tu contraseña?</string>
</resources>